//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Otp {
  id Int [pk, increment]
  phone String [unique, not null]
  code Int [not null]
  createdAt DateTime [default: `now()`, not null]
  retryDelay Int [not null]
  user User [not null]
}

Table User {
  id Int [pk, increment]
  phone String [unique, not null]
  firstname String
  middlename String
  lastname String
  email String [unique]
  city String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  otp Otp
  loginHistory LoginHistory [not null]
  userActions UserActions [not null]
  profileChangeHistory ProfileChangeHistory [not null]
}

Table LoginHistory {
  id Int [pk, increment]
  userId Int [not null]
  loginTime DateTime [default: `now()`, not null]
  ipAddress String
  user User [not null]
}

Table UserActions {
  id Int [pk, increment]
  userId Int [not null]
  action String [not null]
  timestamp DateTime [default: `now()`, not null]
  historyId Int [not null]
  historyType HistoryType [not null]
  user User [not null]
}

Table ProfileChangeHistory {
  id Int [pk, increment]
  userId Int [not null]
  change String [not null]
  timestamp DateTime [default: `now()`, not null]
  user User [not null]
}

Enum HistoryType {
  LOGIN_HISTORY
  PROFILE_CHANGE_HISTORY
}

Ref: Otp.phone - User.phone [delete: Cascade]

Ref: LoginHistory.userId > User.id [delete: Cascade]

Ref: UserActions.userId > User.id [delete: Cascade]

Ref: ProfileChangeHistory.userId > User.id [delete: Cascade]